[package]
name = "torcurve-rs"
version = "0.1.1"
edition = "2021"
description = "parameterized curve formula for generating lots of different curve shapes useful for easing, etc. based on a torcado tweet"
license = "MIT"
homepage = "https://github.com/akarras/torcurve-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
